<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundWhite"
    tools:context=".BrowserNavigatorActivity">

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/browserPager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonsLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/buttonsLayout"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="@color/tabsBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/browserMQTTButton"
            style="@android:style/Widget.Material.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:onClick="selectKnown"
            android:text="@string/browserMQTTButton"
            android:textColor="@color/tabsActiveLabel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/browserBLEButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/browserBLEButton"
            style="@android:style/Widget.Material.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:onClick="selectNearby"
            android:text="@string/browserBLEButton"
            android:textColor="@color/tabsInactiveLabel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/browserDemoButton"
            app:layout_constraintStart_toEndOf="@+id/browserMQTTButton"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/browserDemoButton"
            style="@android:style/Widget.Material.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:onClick="selectDemo"
            android:text="@string/browserDemoButton"
            android:textColor="@color/tabsInactiveLabel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/browserBLEButton"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>